@@ -13,111 +13,123 @@
 // to make sure it gets translated, Context is a disambiguating help for translators
 // The second parameter of addItem is the value of the tag
 
-void addDefaults(QComboBox* Box)
+
+static QString translateTag(const char* Context, const char* src, bool DoIt)
+{
+	if (DoIt)
+		return QCoreApplication::translate(Context,src);
+	else
+		return QString::fromLatin1(src);
+}
+
+void addDefaults(QComboBox* Box, bool DoIt)
 {
 	Box->addItem(
-		QCoreApplication::translate("DefaultTags","Not specified"),
+		translateTag("DefaultTags","Not specified", DoIt),
 		"__unspecified");
 	Box->addItem(
-		QCoreApplication::translate("DefaultTags","Unknown"),
+		translateTag("DefaultTags","Unknown", DoIt),
 		"__unknown");
 }
 
 void fillAmenities(QComboBox* Box)
 {
-	addDefaults(Box);
-	Box->addItem(QCoreApplication::translate("Amenities","Arts centre"), "arts_centre");
-	Box->addItem(QCoreApplication::translate("Amenities","ATM or cash point"), "atm");
-	Box->addItem(QCoreApplication::translate("Amenities","Bank"), "bank");
-	Box->addItem(QCoreApplication::translate("Amenities","Bank with atm"), "bank;atm");
-	Box->addItem(QCoreApplication::translate("Amenities","Beer garden"), "biergarten");
-	Box->addItem(QCoreApplication::translate("Amenities","Parking for bicycles"), "bicycle_parking");
-	Box->addItem(QCoreApplication::translate("Amenities","Bicycle Rental"), "bicycle_rental");
-	Box->addItem(QCoreApplication::translate("Amenities","Bureau de change"), "bureau_de_change");
-	Box->addItem(QCoreApplication::translate("Amenities","Bus station"), "bus_station");
-	Box->addItem(QCoreApplication::translate("Amenities","Cafe"), "cafe");
-	Box->addItem(QCoreApplication::translate("Amenities","Car Rental"), "car_rental");
-	Box->addItem(QCoreApplication::translate("Amenities","Car Sharing"), "car_sharing");
-	Box->addItem(QCoreApplication::translate("Amenities","Cinema"), "cinema");
-	Box->addItem(QCoreApplication::translate("Amenities","College"), "college");
-	Box->addItem(QCoreApplication::translate("Amenities","Court house"), "courthouse");
-	Box->addItem(QCoreApplication::translate("Amenities","Crematorium"), "crematorium");
-	Box->addItem(QCoreApplication::translate("Amenities","Source of drinking water"), "drinking_water");
-	Box->addItem(QCoreApplication::translate("Amenities","Fast food"), "Fast food");
-	Box->addItem(QCoreApplication::translate("Amenities","Fire Station"), "fire_station");
-	Box->addItem(QCoreApplication::translate("Amenities","Fountain"), "fountain");
-	Box->addItem(QCoreApplication::translate("Amenities","Fuel"), "fuel");
-	Box->addItem(QCoreApplication::translate("Amenities","Small place of burial"), "grave_yard");
-	Box->addItem(QCoreApplication::translate("Amenities","Hospital"), "hospital");
-	Box->addItem(QCoreApplication::translate("Amenities","Library"), "library");
-	Box->addItem(QCoreApplication::translate("Amenities","Nightclub"), "nightclub");
-	Box->addItem(QCoreApplication::translate("Amenities","Parking"), "parking");
-	Box->addItem(QCoreApplication::translate("Amenities","Pharmacy"), "pharmacy");
-	Box->addItem(QCoreApplication::translate("Amenities","Place of Worship"), "place_of_worship");
-	Box->addItem(QCoreApplication::translate("Amenities","Police Station"), "police");
-	Box->addItem(QCoreApplication::translate("Amenities","Post Box"), "post_box");
-	Box->addItem(QCoreApplication::translate("Amenities","Post Office"), "post_office");
-	Box->addItem(QCoreApplication::translate("Amenities","Prison"), "prison");
-	Box->addItem(QCoreApplication::translate("Amenities","Pub"), "pub");
-	Box->addItem(QCoreApplication::translate("Amenities","Public building"), "public_building");
-	Box->addItem(QCoreApplication::translate("Amenities","Public Telephone"), "telephone");
-	Box->addItem(QCoreApplication::translate("Amenities","Recycling Facilities"), "recycling");
-	Box->addItem(QCoreApplication::translate("Amenities","Restaurant"), "restaurant");
-	Box->addItem(QCoreApplication::translate("Amenities","School"), "school");
-	Box->addItem(QCoreApplication::translate("Amenities","Taxi"), "taxi");
-	Box->addItem(QCoreApplication::translate("Amenities","Theatre or opera house"), "theatre");
-	Box->addItem(QCoreApplication::translate("Amenities","Toilets"), "toilets");
-	Box->addItem(QCoreApplication::translate("Amenities","Town hall"), "townhall");
-	Box->addItem(QCoreApplication::translate("Amenities","University"), "university");
-	Box->addItem(QCoreApplication::translate("Amenities","Waste Disposal"), "waste_disposal");
+	bool DoIt = M_PREFS->getTranslateTags();
+	addDefaults(Box, DoIt);
+	Box->addItem(translateTag("Amenities","Arts centre",DoIt), "arts_centre");
+	Box->addItem(translateTag("Amenities","ATM or cash point",DoIt), "atm");
+	Box->addItem(translateTag("Amenities","Bank",DoIt), "bank");
+	Box->addItem(translateTag("Amenities","Bank with atm",DoIt), "bank;atm");
+	Box->addItem(translateTag("Amenities","Beer garden",DoIt), "biergarten");
+	Box->addItem(translateTag("Amenities","Parking for bicycles", DoIt), "bicycle_parking");
+	Box->addItem(translateTag("Amenities","Bicycle Rental", DoIt), "bicycle_rental");
+	Box->addItem(translateTag("Amenities","Bureau de change", DoIt), "bureau_de_change");
+	Box->addItem(translateTag("Amenities","Bus station", DoIt), "bus_station");
+	Box->addItem(translateTag("Amenities","Cafe", DoIt), "cafe");
+	Box->addItem(translateTag("Amenities","Car Rental", DoIt), "car_rental");
+	Box->addItem(translateTag("Amenities","Car Sharing", DoIt), "car_sharing");
+	Box->addItem(translateTag("Amenities","Cinema", DoIt), "cinema");
+	Box->addItem(translateTag("Amenities","College", DoIt), "college");
+	Box->addItem(translateTag("Amenities","Court house", DoIt), "courthouse");
+	Box->addItem(translateTag("Amenities","Crematorium", DoIt), "crematorium");
+	Box->addItem(translateTag("Amenities","Source of drinking water", DoIt), "drinking_water");
+	Box->addItem(translateTag("Amenities","Fast food", DoIt), "Fast food");
+	Box->addItem(translateTag("Amenities","Fire Station", DoIt), "fire_station");
+	Box->addItem(translateTag("Amenities","Fountain", DoIt), "fountain");
+	Box->addItem(translateTag("Amenities","Fuel", DoIt), "fuel");
+	Box->addItem(translateTag("Amenities","Small place of burial", DoIt), "grave_yard");
+	Box->addItem(translateTag("Amenities","Hospital", DoIt), "hospital");
+	Box->addItem(translateTag("Amenities","Library", DoIt), "library");
+	Box->addItem(translateTag("Amenities","Nightclub", DoIt), "nightclub");
+	Box->addItem(translateTag("Amenities","Parking", DoIt), "parking");
+	Box->addItem(translateTag("Amenities","Pharmacy", DoIt), "pharmacy");
+	Box->addItem(translateTag("Amenities","Place of Worship", DoIt), "place_of_worship");
+	Box->addItem(translateTag("Amenities","Police Station", DoIt), "police");
+	Box->addItem(translateTag("Amenities","Post Box", DoIt), "post_box");
+	Box->addItem(translateTag("Amenities","Post Office", DoIt), "post_office");
+	Box->addItem(translateTag("Amenities","Prison", DoIt), "prison");
+	Box->addItem(translateTag("Amenities","Pub", DoIt), "pub");
+	Box->addItem(translateTag("Amenities","Public building", DoIt), "public_building");
+	Box->addItem(translateTag("Amenities","Public Telephone", DoIt), "telephone");
+	Box->addItem(translateTag("Amenities","Recycling Facilities", DoIt), "recycling");
+	Box->addItem(translateTag("Amenities","Restaurant", DoIt), "restaurant");
+	Box->addItem(translateTag("Amenities","School", DoIt), "school");
+	Box->addItem(translateTag("Amenities","Taxi", DoIt), "taxi");
+	Box->addItem(translateTag("Amenities","Theatre or opera house", DoIt), "theatre");
+	Box->addItem(translateTag("Amenities","Toilets", DoIt), "toilets");
+	Box->addItem(translateTag("Amenities","Town hall", DoIt), "townhall");
+	Box->addItem(translateTag("Amenities","University", DoIt), "university");
+	Box->addItem(translateTag("Amenities","Waste Disposal", DoIt), "waste_disposal");
 }
 
 void fillHighway(QComboBox* Box)
 {
-	addDefaults(Box);
-	Box->addItem(QCoreApplication::translate("Highway","Motorway"), "motorway");
-	Box->addItem(QCoreApplication::translate("Highway","Ramp to motorway"), "motorway_link");
-	Box->addItem(QCoreApplication::translate("Highway","Trunk road"), "trunk");
-	Box->addItem(QCoreApplication::translate("Highway","Ramp to trunk road"), "trunk_link");
-	Box->addItem(QCoreApplication::translate("Highway","Primary road"), "primary");
-	Box->addItem(QCoreApplication::translate("Highway","Ramp to primary road"), "primary_link");
-	Box->addItem(QCoreApplication::translate("Highway","Secondary road"), "secondary");
-	Box->addItem(QCoreApplication::translate("Highway","Tertiary road"), "tertiary");
-	Box->addItem(QCoreApplication::translate("Highway","Unclassified road"), "unclassified");
-	Box->addItem(QCoreApplication::translate("Highway","Residential road"), "residential");
-	Box->addItem(QCoreApplication::translate("Highway","Service road"), "service");
-	Box->addItem(QCoreApplication::translate("Highway","Track road"), "track");
-	Box->addItem(QCoreApplication::translate("Highway","Pedestrian priority road"), "living_street");
-	Box->addItem(QCoreApplication::translate("Highway","Pedestrian only road"), "pedestrian");
-	Box->addItem(QCoreApplication::translate("Highway","Footway"), "footway");
-	Box->addItem(QCoreApplication::translate("Highway","Cycleway"), "cycleway");
-	Box->addItem(QCoreApplication::translate("Highway","Bridleway"), "bridleway");
-	Box->addItem(QCoreApplication::translate("Highway","Steps"), "steps");
-	Box->addItem(QCoreApplication::translate("Highway","Bus guideway (not a bus way)"), "bus_guideway");
-	Box->addItem(QCoreApplication::translate("Highway","Unsurfaced road (old tag)"), "unsurfaced");
+	bool DoIt = M_PREFS->getTranslateTags();
+	addDefaults(Box, DoIt);
+	Box->addItem(translateTag("Highway","Motorway", DoIt), "motorway");
+	Box->addItem(translateTag("Highway","Ramp to motorway", DoIt), "motorway_link");
+	Box->addItem(translateTag("Highway","Trunk road", DoIt), "trunk");
+	Box->addItem(translateTag("Highway","Ramp to trunk road", DoIt), "trunk_link");
+	Box->addItem(translateTag("Highway","Primary road", DoIt), "primary");
+	Box->addItem(translateTag("Highway","Ramp to primary road", DoIt), "primary_link");
+	Box->addItem(translateTag("Highway","Secondary road", DoIt), "secondary");
+	Box->addItem(translateTag("Highway","Tertiary road", DoIt), "tertiary");
+	Box->addItem(translateTag("Highway","Unclassified road", DoIt), "unclassified");
+	Box->addItem(translateTag("Highway","Residential road", DoIt), "residential");
+	Box->addItem(translateTag("Highway","Service road", DoIt), "service");
+	Box->addItem(translateTag("Highway","Track road", DoIt), "track");
+	Box->addItem(translateTag("Highway","Pedestrian priority road", DoIt), "living_street");
+	Box->addItem(translateTag("Highway","Pedestrian only road", DoIt), "pedestrian");
+	Box->addItem(translateTag("Highway","Footway", DoIt), "footway");
+	Box->addItem(translateTag("Highway","Cycleway", DoIt), "cycleway");
+	Box->addItem(translateTag("Highway","Bridleway", DoIt), "bridleway");
+	Box->addItem(translateTag("Highway","Steps", DoIt), "steps");
+	Box->addItem(translateTag("Highway","Bus guideway (not a bus way)", DoIt), "bus_guideway");
+	Box->addItem(translateTag("Highway","Unsurfaced road (old tag)", DoIt), "unsurfaced");
 }
 
 void fillLandUse(QComboBox* Box)
 {
-	addDefaults(Box);
-	Box->addItem(QCoreApplication::translate("landuse","Allotments"),"allotments");
-	Box->addItem(QCoreApplication::translate("landuse","Basin"),"basin");
-	Box->addItem(QCoreApplication::translate("landuse","Brownfield"),"brownfield");
-	Box->addItem(QCoreApplication::translate("landuse","Cemetery"),"cemetery");
-	Box->addItem(QCoreApplication::translate("landuse","Commercial zone"),"commercial");
-	Box->addItem(QCoreApplication::translate("landuse","Construction zone"),"construction");
-	Box->addItem(QCoreApplication::translate("landuse","Farm"),"farm");
-	Box->addItem(QCoreApplication::translate("landuse","Forest"),"forest");
-	Box->addItem(QCoreApplication::translate("landuse","Greenfield"),"greenfield");
-	Box->addItem(QCoreApplication::translate("landuse","Industrial zone"),"industrial");
-	Box->addItem(QCoreApplication::translate("landuse","Landfill"),"landfill");
-	Box->addItem(QCoreApplication::translate("landuse","Military"),"military");
-	Box->addItem(QCoreApplication::translate("landuse","Recreation ground"),"recreation_ground");
-	Box->addItem(QCoreApplication::translate("landuse","Reservoir (water)"),"reservoir");
-	Box->addItem(QCoreApplication::translate("landuse","Residential zone"),"residential");
-	Box->addItem(QCoreApplication::translate("landuse","Retail zone"),"retail");
-	Box->addItem(QCoreApplication::translate("landuse","Surface mineral extraction"),"quarry");
-	Box->addItem(QCoreApplication::translate("landuse","Village green"),"village_green");
+	bool DoIt = M_PREFS->getTranslateTags();
+	addDefaults(Box, DoIt);
+	Box->addItem(translateTag("landuse","Allotments", DoIt),"allotments");
+	Box->addItem(translateTag("landuse","Basin", DoIt),"basin");
+	Box->addItem(translateTag("landuse","Brownfield", DoIt),"brownfield");
+	Box->addItem(translateTag("landuse","Cemetery", DoIt),"cemetery");
+	Box->addItem(translateTag("landuse","Commercial zone", DoIt),"commercial");
+	Box->addItem(translateTag("landuse","Construction zone", DoIt),"construction");
+	Box->addItem(translateTag("landuse","Farm", DoIt),"farm");
+	Box->addItem(translateTag("landuse","Forest", DoIt),"forest");
+	Box->addItem(translateTag("landuse","Greenfield", DoIt),"greenfield");
+	Box->addItem(translateTag("landuse","Industrial zone", DoIt),"industrial");
+	Box->addItem(translateTag("landuse","Landfill", DoIt),"landfill");
+	Box->addItem(translateTag("landuse","Military", DoIt),"military");
+	Box->addItem(translateTag("landuse","Recreation ground", DoIt),"recreation_ground");
+	Box->addItem(translateTag("landuse","Reservoir (water)", DoIt),"reservoir");
+	Box->addItem(translateTag("landuse","Residential zone", DoIt),"residential");
+	Box->addItem(translateTag("landuse","Retail zone", DoIt),"retail");
+	Box->addItem(translateTag("landuse","Surface mineral extraction", DoIt),"quarry");
+	Box->addItem(translateTag("landuse","Village green", DoIt),"village_green");
 }
 
 void setTagComboBoxTo(QComboBox* Box, const QString& userData)
